-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.6.1
-
Windows 7 x64
-
495356ce9d900ce969768bbd48ec8dcdde2124f3
Steps to reproduce:
- Have a git repoA
- Add a git remote "file:///path/to/local/repoB"
- Do some changes in repoA, commit them
- Choose Tools -> Git -> Push to Gerrit
- The dialog provides my Gerrit and the "file" remote (which is selected by default)
Expected: Only the real Gerrit should be selectable in the dialog