Git: Fix remote detection for local remotes starting with "file://"

Task-number: QTCREATORBUG-20618
Change-Id: I21cddf88b64fa7a6acdc92228142976284ef8942
Reviewed-by: Orgad Shaneh <orgads@gmail.com>